--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -1,26 +1,20 @@
 .container {
-
   width: auto;
   display: flex;
   justify-content: center;
   align-items: center;
   height: auto;
   overflow-x: hidden;
-  background-color: blue;
- 
 }
 
 .main {
-
   margin-top: 8rem;
   display: flex;
   width: 100%;
-  height: 20rem;
+  min-height: 20rem;
+  height: auto;
   padding: 0rem 10rem;
-  background-color: brown;
   flex-direction: column;
   justify-content: space-around;
   align-items: center;
 }
-
-
