--- a/src/styles/Form/Form.module.css
+++ b/src/styles/Form/Form.module.css
@@ -6,14 +6,16 @@
 
   
         margin: 1rem;
-        margin-left:  50%;
         display: flex;
-        padding: 1rem;
-        width: 15rem;
+        flex-wrap: wrap;
+        width: 100%;
         min-height: 10rem;
         height: auto;
         flex-direction: column;
         justify-content: space-around;
+        align-items:center;
+
+   
     }
     
 }
@@ -24,7 +26,8 @@
     .form{
 
 
-        margin-right: 20%;
+        margin-right: 0%;
+        align-items:center;
     }
 }
 
@@ -35,6 +38,6 @@
     .form{
 
 
-        margin-right: 50%;
+        margin-right: 0%;
     }
 }
