--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -1,13 +1,35 @@
 
 
 @media screen and (min-width:0px) {
+
+
+  .container{
+
+    width: 100vw;
+    min-height: 100%;
+    height: auto;
+  
+  }
+
   .body {
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
     overflow-x: hidden;
+    min-height: 100vh;
+    height: auto;
+   
     
+    }
+
+    .header{
+
+      background-color: rgba(103, 103, 204, 0.5);
+      width: 100vw;
+      text-align: center;
+      height: 50px;
+      padding: 2rem;
     }
     
     .main {
